# COLT

./: .gitignore  Dockerfile  README.md  get_elevenlabs_voices.py  main.py  main_backup.py  preprocess_audio.py  pyproject.toml  requirements.txt
src/: LLMTools.py  agent_system.py  assistant.py  audio_config.py  bot_telnyx.py  chat_clean.py  check_in_detector.py  event_handlers.py  livekit_main.py  openai_processor.py  pipecat_agent_service.py  prewarm_fnc.py  sample_buck_data.json
